--- a/src/componentes/Trabajo.css
+++ b/src/componentes/Trabajo.css
@@ -8,10 +8,27 @@
 }
 
 .imagen-trabajo {
-  max-width: 100%;   
-  max-height: 150px;  
-  height: auto;       
-  display: block;     
-  margin: auto;       
-  margin-top: 10px;   
+  max-width: 100%;
+  max-height: 150px;
+  height: auto;
+  display: block;
+  margin: auto;
+  margin-top: 10px;
+}
+
+/* Updated styles for the "Agregar a Favoritos" button */
+button {
+  background-color: #4caf50; /* Green background color */
+  color: white; /* White text color */
+  padding: 10px 20px; /* Padding for better appearance */
+  font-size: 16px; /* Font size */
+  cursor: pointer; /* Add a pointer cursor on hover */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Optional: Add rounded corners */
+  margin-top: 10px; /* Add space between the GitHub icon and the button */
+}
+
+/* Style for the button when it's in the "favorito" state */
+button.favorito {
+  background-color: #f44336; /* Red background color for the "Quitar de Favoritos" state */
 }
